# Age-of-Empires-2-DE-Archiver

./: Cargo.toml  IMPROVEMENTS.md  README.md  build.rs  config.toml  last_paths.json  test_output.txt
assets/: achievements.json  configs.app.ini
common/src/: lib.rs
launch/: Cargo.toml  build.rs
launch/src/: main.rs
src/: config.rs  ctx.rs  goldberg.rs  lib.rs  main.rs  steam.rs  ui.rs  utils.rs
src/aoe/: aoe2.rs  mod.rs
src/aoe/aoe2/: companion.rs  launcher.rs  mod.rs
