[package]
name = "aoe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dirs = "6"
eframe = "0.32"
fs_extra = "1.3.0"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
rust-ini = "0.21.3"
serde = "1.0.228"
serde_json = "1"
sevenz-rust2 = "0.19"
toml = { version = "0.9.7", features = ["serde"] }
winreg = "0.55"
zip = "5.1.1"
