[package]
name = "aoe-archive"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dirs = "6"
eframe = "0.33"
fs_extra = "1.3.0"
reqwest = { version = "0.12", features = ["default-tls", "blocking", "json"] }
rfd = "0.15.4"
rust-ini = "0.21.3"
serde = "1.0.228"
serde_json = "1"
sevenz-rust2 = "0.19"
toml = { version = "0.9", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
winreg = "0.55"
zip = "5.1.1"

[profile.release-lto]
inherits = "release"
strip = true
lto = true
